# Taxonomic-Span-Categorization

./: .gitignore  Agglomerative_ATC.ipynb  HDBSCAN_for_ATC.ipynb  README.md  Test_Taxonomic_NER.ipynb  pyproject.toml
debugging/: debug_categorization.py  debug_embeddings.py  debug_structure.py  notebook_debug_framework.py  test_fix.py
docs/: TAXONOMY.md
examples/: demonstration_script.py
src/tax_span_cat/: SpanCategorizer.py  TaxonomyValidator.py
src/tax_span_cat/taxonomies/: SpaCy_NER.json  general_ner.json
tests/: test_SpanCategorizer.py  test_TaxonomyValidator.py  test_general_ner_taxonomy.py  test_span_categorizer.py  test_spancategorizer_improvements.py  test_taxonomy_validator.py
